--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+  GNU nano 6.2                                                         docker-compose.yaml                                                                  version: '3.8'
 
 services:
   web:
@@ -16,12 +16,16 @@ services:
 
   db:
     image: postgres:latest
-    container_name: postgres_db
+    container_name: db
     environment:
       POSTGRES_DB: devops_database
       POSTGRES_USER: scott
       POSTGRES_PASSWORD: 1234
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     restart: always
 
+volumes:
+  postgres_data:
