--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-  GNU nano 6.2                                                         docker-compose.yaml                                                                  version: '3.8'
+                                                                  version: '3.8'
 
 services:
   web:
